avg ratings in hatstats. renamed ratings-range.js into ratings-display.js
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8091 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -373,7 +373,7 @@ foxtrick.MatchSimulator.RatingsBellow.desc=Předpověď hodnocení zobrazit dole
 foxtrick.MatchSimulator.RatingsRight.desc=Předpověď hodnocení zobrazit napravo
 foxtrick.HeaderToggle.desc=Kliknutím na nadpisy druhé úrovně (h2) přepíná viditelnost následujícího oddílu. Pamatuje si poslední nastavení dle jednotlivých stránek a nadpisů
 foxtrick.Filter.desc=Do horní části stránky se seznamem hráčů přidává filtry
-foxtrick.RatingsRange.desc=Průměrná hodnocení ve statistikách zobrazuje v rozsahu 0-20
+foxtrick.RatingsDisplay.desc=Průměrná hodnocení ve statistikách zobrazuje v rozsahu 0-20
 
 # -----------------------------------------------------------------------------
 
