--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -368,7 +368,7 @@ foxtrick.MatchSimulator.RatingsBellow.desc=Mostrar la predicción en la parte inf
 foxtrick.MatchSimulator.RatingsRight.desc=Mostrar la predicción en la parte derecha
 foxtrick.HeaderToggle.desc=Al hacer clic en los encabezados h2 se alterna mostrar y ocultar la siguiente sección. Recuerda el último ajuste de forma individual según el tipo de página y el título de encabezado
 foxtrick.Filter.desc=Añade filtros a la página de Mejores Jugadores
-foxtrick.RatingsRange.desc=Mostrar las calificaciones promedio en estadisticas dentro del rango 0-20
+foxtrick.RatingsDisplay.desc=Mostrar las calificaciones promedio en estadisticas dentro del rango 0-20
 
 # -----------------------------------------------------------------------------
 
