--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -374,7 +374,7 @@ foxtrick.MatchSimulator.RatingsBellow.desc=예측 아래 표시
 foxtrick.MatchSimulator.RatingsRight.desc=오른쪽에 예측 표시
 foxtrick.HeaderToggle.desc=h2-머리글을 클릭하면 다음 구역 보기와 감추기로 전환. 페이지와 머리글 제목을 기반으로 마지막 설정을 기억
 foxtrick.Filter.desc=최고 선수 페이지에 필터 추가
-foxtrick.RatingsRange.desc=통계에 0-20 범위로 평균 레이팅 표시
+foxtrick.RatingsDisplay.desc=통계에 0-20 범위로 평균 레이팅 표시
 
 # -----------------------------------------------------------------------------
 
