--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -367,7 +367,7 @@ foxtrick.MatchSimulator.RatingsBellow.desc=Rodyti spėjimą žemiau
 foxtrick.MatchSimulator.RatingsRight.desc=Rodyti spėjimą dešinėje
 foxtrick.HeaderToggle.desc=Paspaudus ant antro lygio antraštės (su rodykle) įjungiamas ar išjungiamas tos sekcijos vaizdavimas. Nustatymai atsimenami kiekvienam puslapiui atskirai
 foxtrick.Filter.desc=Geriausių žaidėjų puslapyje pridėti filtrus
-foxtrick.RatingsRange.desc=Vidutinius reitingus statistikoje paverčia į 0–20 intervalo reitingus
+foxtrick.RatingsDisplay.desc=Vidutinius reitingus statistikoje paverčia į 0–20 intervalo reitingus
 
 # -----------------------------------------------------------------------------
 
