--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -360,7 +360,7 @@ foxtrick.MatchSimulator.RatingsBellow.desc=Plaats de ratings voorspelling onder 
 foxtrick.MatchSimulator.RatingsRight.desc=Plaats de ratings voorspelling rechts van de opstelling
 foxtrick.HeaderToggle.desc=Klik op bepaalde headers om de sectie te verbergen of juist te zien. Onthoudt de laatst gekozen instelling, gebaseerd op pagina & header titel.
 foxtrick.Filter.desc=Voeg filters toe aan de lijst met top spelers
-foxtrick.RatingsRange.desc=Laat gemiddelde ratings in de statistieken in het 0-20 bereik zien
+foxtrick.RatingsDisplay.desc=Laat gemiddelde ratings in de statistieken in het 0-20 bereik zien
 
 # -----------------------------------------------------------------------------
 
