--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -368,7 +368,7 @@ foxtrick.MatchSimulator.RatingsBellow.desc=Показать предсказан
 foxtrick.MatchSimulator.RatingsRight.desc=предсказание рейтингов справа
 foxtrick.HeaderToggle.desc=Нажатие на h2-заголовки переключает показ/скрытие соответствующей секции. Последние настройки запоминаются для каждого типа страницы и заголовка
 foxtrick.Filter.desc=Фильтры на странице лучших игроков
-foxtrick.RatingsRange.desc=Показывать средние рейтинги в статистике в диапазоне 0-20
+foxtrick.RatingsDisplay.desc=Показывать средние рейтинги в статистике в диапазоне 0-20
 
 # -----------------------------------------------------------------------------
 
