--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -373,7 +373,7 @@ foxtrick.MatchSimulator.RatingsBellow.desc=Приказује предвиђањ
 foxtrick.MatchSimulator.RatingsRight.desc=Приказује предвиђање оцена са десне стране поставе у меч налозима.
 foxtrick.HeaderToggle.desc=Омогућава ширење и скупљање свих заглавља на ХТ страницама. Памти ваша индивидуална подешавања на бази типа странице и назива заглавља.
 foxtrick.Filter.desc=Додaје филтере на страници Најбољи играчи (НТ Кандидати)
-foxtrick.RatingsRange.desc=Приказује просек оцена у статистици у распону од 0-20
+foxtrick.RatingsDisplay.desc=Приказује просек оцена у статистици у распону од 0-20
 
 # ----------------------------------------------------------------------------
 
