--- a/content/locale/fa/htlang.xml
+++ b/content/locale/fa/htlang.xml
@@ -19,11 +19,11 @@
 	<!-- tactics appearing in match detail page -->
 	<tactics>
 		<tactic type="normal" value="عادی" />
-		<tactic type="pressing" value="پرسینگ" />
+		<tactic type="pressing" value="پرسينگ" />
 		<tactic type="ca" value="ضد حمله" />
-		<tactic type="aow" value="حمله از جناحین" />
+		<tactic type="aow" value="حمله از جناحين" />
 		<tactic type="aim" value="حمله از عمق" />
-		<tactic type="creatively" value="بازی خلاقانه" />
+		<tactic type="creatively" value="بازي خلاقانه" />
 		<tactic type="longshots" value="شوت از راه دور" />
 	</tactics>
 
@@ -39,12 +39,12 @@
 
 	<!-- specialties appearing on players page. copy "value". translate "short" -->
 	<specialties>
-		<specialty type="Unpredictable" value="Unpredictable" short="Un" />
-		<specialty type="Powerful" value="Powerful" short="Po" />
-		<specialty type="Quick" value="Quick" short="Qu" />
-		<specialty type="Technical" value="Technical" short="Te" />
-		<specialty type="Head" value="Head" short="He" />
-		<specialty type="Regainer" value="Regainer" short="Re" />
+		<specialty type="Unpredictable" value="غيرقابل پيش‌بيني" short="Un" />
+		<specialty type="Powerful" value="قدرتي" short="Po" />
+		<specialty type="Quick" value="سرعتي" short="Qu" />
+		<specialty type="Technical" value="تکنيکي" short="Te" />
+		<specialty type="Head" value="سرزن" short="He" />
+		<specialty type="Regainer" value="تندرست" short="Re" />
 	</specialties>
 
 	<!-- levels word connections appearing denominations page. copy "text" -->
