--- a/content/locale/bg/htlang.xml
+++ b/content/locale/bg/htlang.xml
@@ -71,4 +71,40 @@
 		<level text="бедствено" value="1" />
 		<level text="липсващо" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="любимец на отбора" value="5"/>
+		<level text="популярен човек" value="4"/>
+		<level text="симпатичен човек" value="3"/>
+		<level text="приятен човек" value="2"/>
+		<level text="противоречив човек" value="1"/>
+		<level text="неприятен човек" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="като светец" value="5"/>
+		<level text="честен" value="4"/>
+		<level text="добър" value="3"/>
+		<level text="почтен" value="2"/>
+		<level text="некоректен" value="1"/>
+		<level text="непочтен" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="неуравновесен" value="5"/>
+		<level text="сприхав" value="4"/>
+		<level text="темпераментен" value="3"/>
+		<level text="уравновесен" value="2"/>
+		<level text="спокоен" value="1"/>
+		<level text="тих" value="0"/>
+	</aggressiveness>
 </language>
