--- a/content/locale/bs/htlang.xml
+++ b/content/locale/bs/htlang.xml
@@ -71,4 +71,40 @@
 		<level text="katastrofalan" value="1" />
 		<level text="nepostojeći" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="omiljeni član tima" value="5"/>
+		<level text="popularan tip" value="4"/>
+		<level text="simpatičan tip" value="3"/>
+		<level text="ugodan tip" value="2"/>
+		<level text="kontroverzan lik" value="1"/>
+		<level text="gadan tip" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="duša od čovjeka" value="5"/>
+		<level text="pravedan" value="4"/>
+		<level text="pošten" value="3"/>
+		<level text="iskren" value="2"/>
+		<level text="neiskren" value="1"/>
+		<level text="ozloglašen" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="nestabilan" value="5"/>
+		<level text="prgav" value="4"/>
+		<level text="temperamentan" value="3"/>
+		<level text="uravnotežen" value="2"/>
+		<level text="miran" value="1"/>
+		<level text="opušten" value="0"/>
+	</aggressiveness>
 </language>
