--- a/content/locale/cs/htlang.xml
+++ b/content/locale/cs/htlang.xml
@@ -71,4 +71,40 @@
 		<level text="odstrašující" value="1" />
 		<level text="neexistující" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="Miláček týmu" value="5"/>
+		<level text="Oblíbený hráč" value="4"/>
+		<level text="Sympatický chlapík" value="3"/>
+		<level text="Příjemný kluk" value="2"/>
+		<level text="Hašteřivý člověk" value="1"/>
+		<level text="Protiva" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="učiněný andílek" value="5"/>
+		<level text="spravedlivý" value="4"/>
+		<level text="férový" value="3"/>
+		<level text="čestný" value="2"/>
+		<level text="nečestný" value="1"/>
+		<level text="bezectný" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="labilní" value="5"/>
+		<level text="prchlivý" value="4"/>
+		<level text="temperamentní" value="3"/>
+		<level text="vyrovnaný" value="2"/>
+		<level text="chladnokrevný" value="1"/>
+		<level text="ledově klidný" value="0"/>
+	</aggressiveness>
 </language>
