--- a/content/locale/ee/htlang.xml
+++ b/content/locale/ee/htlang.xml
@@ -71,4 +71,40 @@
 		<level text="kohutav" value="1" />
 		<level text="olematu" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="Armastatud meeskonnaliige" value="5"/>
+		<level text="Populaarne sell" value="4"/>
+		<level text="Sümpaatne kuju" value="3"/>
+		<level text="Meeldiv sell" value="2"/>
+		<level text="Vastuoluline isiksus" value="1"/>
+		<level text="Ebameeldiv tüüp" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="pühaklik" value="5"/>
+		<level text="äraostmatu" value="4"/>
+		<level text="õiglane" value="3"/>
+		<level text="aus" value="2"/>
+		<level text="ebaaus" value="1"/>
+		<level text="autu" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="ebastabiilne" value="5"/>
+		<level text="äge" value="4"/>
+		<level text="temperamentne" value="3"/>
+		<level text="tasakaalukas" value="2"/>
+		<level text="rahulik" value="1"/>
+		<level text="tasane" value="0"/>
+	</aggressiveness>
 </language>
