--- a/content/locale/fa/htlang.xml
+++ b/content/locale/fa/htlang.xml
@@ -71,4 +71,40 @@
 		<level text="افتضاح" value="1" />
 		<level text="بدون مهارت" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="دوست داشتنی" value="5"/>
+		<level text="محبوب" value="4"/>
+		<level text="مهربان" value="3"/>
+		<level text="خوش‌‌‌‌‌‌برخورد" value="2"/>
+		<level text="جنجالی" value="1"/>
+		<level text="بداخلاق" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="پاک سرشت" value="5"/>
+		<level text="نیکوکار" value="4"/>
+		<level text="سر به زیر" value="3"/>
+		<level text="درستکار" value="2"/>
+		<level text="غیرقابل اعتماد" value="1"/>
+		<level text="بدنام" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="یاغی" value="5"/>
+		<level text="تند مزاج" value="4"/>
+		<level text="عصبی" value="3"/>
+		<level text="متعادل" value="2"/>
+		<level text="آرام" value="1"/>
+		<level text="خونسرد" value="0"/>
+	</aggressiveness>
 </language>
