--- a/content/locale/hu/htlang.xml
+++ b/content/locale/hu/htlang.xml
@@ -71,4 +71,40 @@
 		<level text="katasztrofális" value="1" />
 		<level text="nem létező" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="Imádott csapattag" value="5"/>
+		<level text="Népszerű fickó" value="4"/>
+		<level text="Szimpatikus fickó" value="3"/>
+		<level text="Kedves fickó" value="2"/>
+		<level text="Öntörvényű ember" value="1"/>
+		<level text="Bajkeverő alak" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="angyali" value="5"/>
+		<level text="igazságos" value="4"/>
+		<level text="egyenes" value="3"/>
+		<level text="becsületes" value="2"/>
+		<level text="sunyi" value="1"/>
+		<level text="balhés" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="bizonytalan" value="5"/>
+		<level text="lobbanékony" value="4"/>
+		<level text="temperamentumos" value="3"/>
+		<level text="kiegyensúlyozott" value="2"/>
+		<level text="higgadt" value="1"/>
+		<level text="jámbor" value="0"/>
+	</aggressiveness>
 </language>
