--- a/content/locale/ja/htlang.xml
+++ b/content/locale/ja/htlang.xml
@@ -71,4 +71,40 @@
 		<level text="最悪" value="1" />
 		<level text="無価値" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="皆に愛されている" value="5"/>
+		<level text="人気者" value="4"/>
+		<level text="思いやりある" value="3"/>
+		<level text="感じよい" value="2"/>
+		<level text="問題の多い" value="1"/>
+		<level text="嫌われ者" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="聖人のよう" value="5"/>
+		<level text="高潔" value="4"/>
+		<level text="正義漢" value="3"/>
+		<level text="正直" value="2"/>
+		<level text="不正直" value="1"/>
+		<level text="悪評高い" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="不安定" value="5"/>
+		<level text="激情家" value="4"/>
+		<level text="気分屋" value="3"/>
+		<level text="冷静" value="2"/>
+		<level text="穏やか" value="1"/>
+		<level text="もの静か" value="0"/>
+	</aggressiveness>
 </language>
