--- a/content/locale/ka/htlang.xml
+++ b/content/locale/ka/htlang.xml
@@ -71,4 +71,40 @@
 		<level text="საშინელი" value="1" />
 		<level text="არანაირი" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="გუნდის გული და სული" value="5"/>
+		<level text="პოპულარული" value="4"/>
+		<level text="საყვარელი" value="3"/>
+		<level text="სასიამოვნო" value="2"/>
+		<level text="საეჭვო" value="1"/>
+		<level text="საძაგელი" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="წმინდანი" value="5"/>
+		<level text="უმწიკვლო" value="4"/>
+		<level text="სამართლიანი" value="3"/>
+		<level text="პატიოსანი" value="2"/>
+		<level text="უსინდისო" value="1"/>
+		<level text="გაიძვერა" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="შმაგი" value="5"/>
+		<level text="აგრესიული" value="4"/>
+		<level text="ფიცხი" value="3"/>
+		<level text="გაწონასწორებული" value="2"/>
+		<level text="მშვიდი" value="1"/>
+		<level text="უშფოთველი" value="0"/>
+	</aggressiveness>
 </language>
