--- a/content/locale/lt/htlang.xml
+++ b/content/locale/lt/htlang.xml
@@ -71,4 +71,40 @@
 		<level text="katastrofiškas" value="1" />
 		<level text="neegzistuojantis" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="mylimas komandos narys" value="5"/>
+		<level text="populiarus vaikinas" value="4"/>
+		<level text="simpatiškas vaikinas" value="3"/>
+		<level text="malonus vaikinas" value="2"/>
+		<level text="kontroversiška asmenybė" value="1"/>
+		<level text="bjaurus vaikinas" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="šventasis" value="5"/>
+		<level text="teisingas" value="4"/>
+		<level text="doras" value="3"/>
+		<level text="sąžiningas" value="2"/>
+		<level text="nesąžiningas" value="1"/>
+		<level text="prastos reputacijos" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="nepastovus" value="5"/>
+		<level text="karštakošis" value="4"/>
+		<level text="temperamentingas" value="3"/>
+		<level text="subalansuotas" value="2"/>
+		<level text="ramus" value="1"/>
+		<level text="pasyvus" value="0"/>
+	</aggressiveness>
 </language>
