--- a/content/locale/mk/htlang.xml
+++ b/content/locale/mk/htlang.xml
@@ -71,4 +71,40 @@
 		<level text="катастрофален" value="1" />
 		<level text="непостоечки" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="сакан член на тимот" value="5"/>
+		<level text="популарно момче" value="4"/>
+		<level text="симпатично момче" value="3"/>
+		<level text="ведро момче" value="2"/>
+		<level text="контраверзно момче" value="1"/>
+		<level text="валкано момче" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="светец" value="5"/>
+		<level text="праведен" value="4"/>
+		<level text="многу чесен" value="3"/>
+		<level text="чесен" value="2"/>
+		<level text="нечесен" value="1"/>
+		<level text="озлогласен" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="нестабилен" value="5"/>
+		<level text="жесток" value="4"/>
+		<level text="темпераментен" value="3"/>
+		<level text="балансиран" value="2"/>
+		<level text="смирен" value="1"/>
+		<level text="спокоен" value="0"/>
+	</aggressiveness>
 </language>
