--- a/content/locale/vi/htlang.xml
+++ b/content/locale/vi/htlang.xml
@@ -71,4 +71,40 @@
 		<level text="thảm hại" value="1" />
 		<level text="bất tài" value="0" />
 	</levels>
+	
+	<!-- Agreeability levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<agreeability>
+		<level text="thành viên được yêu mến" value="5"/>
+		<level text="người được ngưỡng mộ" value="4"/>
+		<level text="người đáng mến" value="3"/>
+		<level text="người dễ chịu" value="2"/>
+		<level text="người thích tranh cãi" value="1"/>
+		<level text="kẻ cáu bẳn" value="0"/>
+	</agreeability>
+	
+	<!-- Honesty levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<honesty>
+		<level text="thánh thiện" value="5"/>
+		<level text="cao thượng" value="4"/>
+		<level text="chính trực" value="3"/>
+		<level text="trung thực" value="2"/>
+		<level text="thiếu trung thực" value="1"/>
+		<level text="gian lận" value="0"/>
+	</honesty>
+	
+	<!-- Aggressiveness levels in denominations page.
+	     Translate attribute "text" by copying from there in verbatim,
+	     keep attribute "value" unchanged. -->
+	<aggressiveness>
+		<level text="thiếu tự chủ" value="5"/>
+		<level text="dễ nổi giận" value="4"/>
+		<level text="thất thường" value="3"/>
+		<level text="ôn hòa" value="2"/>
+		<level text="điềm tĩnh" value="1"/>
+		<level text="hiền lành" value="0"/>
+	</aggressiveness>
 </language>
