--- a/content/locale/nl/htlang.xml
+++ b/content/locale/nl/htlang.xml
@@ -32,7 +32,7 @@
 		<position type="Keeper" value="Keeper" short="K" />
 		<position type="Central defender" value="Centrale verdediger" short="CD" />
 		<position type="Wing back" value="Vleugelverdediger" short="WB" />
-		<position type="Inner midfielder" value="Centrale middenvelder" short="IM" />
+		<position type="Inner midfielder" value="Middenvelder" short="IM" />
 		<position type="Winger" value="Vleugelspeler" short="W" />
 		<position type="Forward" value="Aanvaller" short="F" />
 	</positions>
